Fix border white space issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,21 @@
     background:linear-gradient(#330a6db4, rgba(255, 0, 0, 0.624), rgba(0, 128, 45, 0.505));
     background-color: rgba(0, 0, 0, 0.461);
 }
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+// html {
+//     margin: 0;
+//     padding: 0;
+// }
+
+.bg {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.328);
+    position: absolute;
+    
+}
